# 3D-Visualisation

./: CMakeLists.txt  Makefile  README.md  TODOList.txt  cmake_install.cmake
.cache/clangd/index/: Camera.h.22D6DBD604D7433E.idx  CubeRenderer.cpp.3A47E37F29369916.idx  CubeRenderer.h.6E862CC0EAAA8071.idx  Cubes.cpp.DC788F914B725D54.idx  Cubes.h.05B02BBE42C3BE4C.idx  RayRenderer.cpp.6429109FCCA01930.idx  RayRenderer.h.2E883B0F400468F5.idx  Shader.cpp.2BFF4B7F6C1FE72E.idx  Shader.h.F950D69AD5BA1D4B.idx  _fixes.hpp.A76E7B8549367170.idx  _vectorize.hpp.F7AAD96137F7025E.idx  common.hpp.5AAC82F7DFB14FFB.idx  compute_common.hpp.16F71C70E8569317.idx  compute_vector_relational.hpp.8390F7057FEB59F0.idx  constants.hpp.3B0C0B16BEFBC28B.idx  constants.inl.A912A0DF283C412E.idx  epsilon.hpp.35E7590043CB19DB.idx  epsilon.inl.43D8FA8894E0714A.idx  exponential.hpp.85A2C1B368C45914.idx  func_common.inl.48CC0D03F81C3933.idx  func_exponential.inl.152598384CA615A7.idx  func_geometric.inl.D631CF0836C8F45F.idx  func_integer.inl.83CEC7371800C73C.idx  func_matrix.inl.3B72237EDCFA8F67.idx  func_packing.inl.92CB7ED016CBD6B4.idx  func_trigonometric.inl.8BEBA16BA7A7643E.idx  func_vector_relational.inl.4C9988A7996AF46B.idx  fwd.hpp.45328520151EB7DF.idx  geometric.hpp.A987CA59874AF932.idx  glad.c.BE1F0446EA458FEB.idx  (+164 more)
includes/: Camera.h  CubeRenderer.h  Cubes.h  RayRenderer.h  Shader.h  vloop.h
resources/: FramgmentShader.glsl  RayVertexShader.glsl  VertexShader.glsl  conversion_rules.cpp  task1_updated.cpp
src/: CubeRenderer.cpp  Cubes.cpp  RayRenderer.cpp  Shader.cpp  main.cpp
